--- a/chr3.rmd
+++ b/chr3.rmd
@@ -1,5 +1,6 @@
-
+<!--
 <link rel="stylesheet" type="text/css" href="auto-number-title.css" />
+-->
 
 # 第三章 R在生物信息学中的简单应用
 
@@ -7,14 +8,19 @@
 
 本章3.1是课题介绍；3.2应用一般扩展R包（非Bioconductor）实现这一课题（例3-1）；3.3和3.4应用Bioconductor中的扩展R包再次实现这一课题（例3-2与例3-3）。读者在学习过程中，要仔细对比Bioconductor的扩展R包与一般扩展R包编程的不同思维方式和主要差别，深入体会Bioconductor处理生物信息问题带来的巨大便利。掌握好这一章的内容，是继续学习好后面章节的基础。本章的课题仅仅作为一个范例，读者不必考虑得到的结果（例如进化树）是否到达预期，而应该把主要精力集中到方法的学习以及如何用编程实现想要的结果等方面。
 
-## 一个序列分析课题
+## 3.1 一个序列分析课题
 
-### 课题背景
-
-...
-
-### 研究目的与实验设计
+### 3.1.1 课题背景
 
 ...
 
-### 数据获取与处理流程
+### 3.1.2 研究目的与实验设计
+
+...
+
+### 3.1.3 数据获取与处理流程
+
+## 3.2 用R包（非Bioconductor）实现课题
+
+### 3.2.1 定义全部函数
+
